unpackaged/main/default/objects/Contact/fields/Account_Owner_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Type__c</fullName>
    <formula>TEXT(Account.Account_Owner_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner Type</label>
    <type>Text</type>
</CustomField>