unpackaged/main/default/objects/Contact/fields/Account_Traction_Required_Fields__c.field-meta.xml
<CustomField>
    <fullName>Account_Traction_Required_Fields__c</fullName>
    <formula>Account.Traction_Required_Fields__c</formula>
    <label>Account Traction Required Fields</label>
    <type>Checkbox</type>
</CustomField>