unpackaged/main/default/objects/Contact/fields/Activity_Contact_Status__c.field-meta.xml
<CustomField>
    <fullName>Activity_Contact_Status__c</fullName>
    <description>Consolidated Contact Status used for Stamping on Tasks, Events and NVM Call Summaries for reporting purposes</description>
    <formula>IF(
 ISBLANK(First_Quote_Date__c),"Non-Quoter",
 IF((TODAY() - Date_of_Last_Quote__c) &lt; 31,"Recent Quoter",
  IF((TODAY() - Date_of_Last_Quote__c) &lt; 91,"Latent Quoter",
  "Lapsed Quoter")
 )
)</formula>
    <label>Activity Contact Status</label>
    <type>Text</type>
</CustomField>