unpackaged/main/default/objects/Contact/fields/AM_Retention_Countdown_Calculation__c.field-meta.xml
<CustomField>
    <fullName>AM_Retention_Countdown_Calculation__c</fullName>
    <formula>IF( and( Account_Owner_Type__c='AM', !ISBLANK(Contact_s_Date_of_First_Order__c)),
365-(today()-(Contact_s_Date_of_First_Order__c)),1234)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>[DNU]AM Retention Countdown Calculation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>