unpackaged/main/default/objects/Contact/fields/Average_Purchase_Interval__c.field-meta.xml
<CustomField>
    <fullName>Average_Purchase_Interval__c</fullName>
    <formula>if( 
Number_Orders__c=1,null,
if(
and( 
not(isblank(Date_of_Last_Order__c)), 
not(isblank(Contact_s_Date_of_First_Order__c)), 
not(isblank(Number_Orders__c))
),
((Date_of_Last_Order__c - Contact_s_Date_of_First_Order__c)/(Number_Orders__c - 1)),
null))</formula>
    <label>Average Purchase Interval (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>