unpackaged/main/default/objects/Contact/fields/BBS_Lifetime_Order_Count__c.field-meta.xml
<CustomField>
    <fullName>BBS_Lifetime_Order_Count__c</fullName>
    <inlineHelpText>Big Blue Saw Lifetime Order Count</inlineHelpText>
    <label>BBS Lifetime Order Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>