unpackaged/main/default/objects/Contact/fields/Bio__c.field-meta.xml
<CustomField>
    <fullName>Bio__c</fullName>
    <inlineHelpText>Short description of person from various sources.</inlineHelpText>
    <label>Bio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>