unpackaged/main/default/objects/Contact/fields/CAS_Contact_Status__c.field-meta.xml
<CustomField>
    <fullName>CAS_Contact_Status__c</fullName>
    <label>CAS Contact Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Contacted</fullName>
            </value>
            <value>
                <fullName>Contacted Qualifying</fullName>
            </value>
            <value>
                <fullName>Contacted Qualified</fullName>
            </value>
            <value>
                <fullName>Contacted Disqualified</fullName>
            </value>
            <value>
                <fullName>Contact Attempted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>