unpackaged/main/default/objects/Contact/fields/Company_Category_Corp_Level__c.field-meta.xml
<CustomField>
    <fullName>Company_Category_Corp_Level__c</fullName>
    <formula>Account.Company_Category_Corp_Level__c</formula>
    <label>Company Category (Corp Level)</label>
    <type>Text</type>
</CustomField>