unpackaged/main/default/objects/Contact/fields/Connect_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Connect_Contact_ID__c</fullName>
    <label>Connect Contact ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>