unpackaged/main/default/objects/Contact/fields/Contact_Classification__c.field-meta.xml
<CustomField>
    <fullName>Contact_Classification__c</fullName>
    <formula>IF(First_Quote_Date__c = null &amp;&amp; Contact_s_Date_of_First_Order__c= null, "Prospect",
IF(First_Quote_Date__c != null &amp;&amp; Contact_s_Date_of_First_Order__c = null, "Quoter",
IF(First_Quote_Date__c != null &amp;&amp; Contact_s_Date_of_First_Order__c != null, "Customer", null)))</formula>
    <label>Contact Classification</label>
    <type>Text</type>
</CustomField>