unpackaged/main/default/objects/Contact/fields/Contact_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Contact_Created_Date__c</fullName>
    <formula>DATEVALUE(CreatedDate)</formula>
    <label>Contact Created Date</label>
    <type>Date</type>
</CustomField>