unpackaged/main/default/objects/Contact/fields/Contact_Form_Status__c.field-meta.xml
<CustomField>
    <fullName>Contact_Form_Status__c</fullName>
    <description>6/29/2023 - Proof of Concept for new Contact Form submissions. Daniel Turkington is POC for the form.</description>
    <label>Contact Form Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Contact_Form_Status</valueSetName>
    </valueSet>
</CustomField>