unpackaged/main/default/objects/Contact/fields/Contact_Get_Site_Url__c.field-meta.xml
<CustomField>
    <fullName>Contact_Get_Site_Url__c</fullName>
    <formula>IF( NOT(ISBLANK(Xometry_ERP_Contact_ID__c)),HYPERLINK("https://get.xometry.com/account-settings/" + Xometry_ERP_Contact_ID__c , "Go to this Contact in the Get Site", "_blank"),"No ERP Contact ID Provided")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Get Site Url</label>
    <type>Text</type>
</CustomField>