unpackaged/main/default/objects/Contact/fields/Contact_Owner__c.field-meta.xml
<CustomField>
    <fullName>Contact_Owner__c</fullName>
    <formula>Owner_ID_Name__c</formula>
    <label>Contact Owner</label>
    <type>Text</type>
</CustomField>