unpackaged/main/default/objects/Contact/fields/Contact_Owner_Email_Int__c.field-meta.xml
<CustomField>
    <fullName>Contact_Owner_Email_Int__c</fullName>
    <formula>Owner.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Owner Email Int</label>
    <type>Text</type>
</CustomField>