unpackaged/main/default/objects/Contact/fields/Contact_Retention_Countdown__c.field-meta.xml
<CustomField>
    <fullName>Contact_Retention_Countdown__c</fullName>
    <formula>IF(ISPICKVAL(Account.Account_Owner_Type__c,"AM"),(Contact_s_Date_of_First_Order__c+365)-TODAY(),null)</formula>
    <label>Contact Retention Countdown</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>