unpackaged/main/default/objects/Contact/fields/Contact_s_Date_of_First_Order__c.field-meta.xml
<CustomField>
    <fullName>Contact_s_Date_of_First_Order__c</fullName>
    <description>First date that the contact placed an order</description>
    <label>Date of First Order</label>
    <type>Date</type>
</CustomField>