unpackaged/main/default/objects/Contact/fields/Contact_Status__c.field-meta.xml
<CustomField>
    <fullName>Contact_Status__c</fullName>
    <formula>IF( NOT(ISBLANK(Contact_s_Date_of_First_Order__c)) ,"Customer", IF(NOT(ISBLANK(First_Quote_Date__c)), "Quoter", "Contact"))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Status</label>
    <type>Text</type>
</CustomField>