unpackaged/main/default/objects/Contact/fields/ContactGetSiteOrderURL__c.field-meta.xml
<CustomField>
    <fullName>ContactGetSiteOrderURL__c</fullName>
    <description>get.xometry.com/orders/ERP Contact ID</description>
    <formula>IF( NOT(ISBLANK(Xometry_ERP_Contact_ID__c)),HYPERLINK("https://get.xometry.com/orders/" + Xometry_ERP_Contact_ID__c , "Get Site Orders URL", "_blank"),"No ERP Contact ID Provided")</formula>
    <label>Contact Get Site Order URL</label>
    <type>Text</type>
</CustomField>