unpackaged/main/default/objects/Contact/fields/ContactGetSiteQuoteURL__c.field-meta.xml
<CustomField>
    <fullName>ContactGetSiteQuoteURL__c</fullName>
    <description>get.xometry.com/quotes/ERP Contact ID</description>
    <formula>IF( NOT(ISBLANK(Xometry_ERP_Contact_ID__c)),HYPERLINK("https://get.xometry.com/quotes/" + Xometry_ERP_Contact_ID__c , "Get Site Quotes URL", "_blank"),"No ERP Contact ID Provided")</formula>
    <label>Contact Get Site Quote URL</label>
    <type>Text</type>
</CustomField>