unpackaged/main/default/objects/Contact/fields/Conversion_Rate__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Rate__c</fullName>
    <formula>Number_Orders__c /  Number_Quotes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is taken from # of Orders and # of Quotes. This includes both Auto and Manual Quotes.</inlineHelpText>
    <label>Conversion Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>