unpackaged/main/default/objects/Contact/fields/Converted_Owner__c.field-meta.xml
<CustomField>
    <fullName>Converted_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Populated from the Lead.ConvertedOwner field when a Lead is converted into a Contact</description>
    <label>Converted Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ContactsConvertedOwner</relationshipName>
    <type>Lookup</type>
</CustomField>