unpackaged/main/default/objects/Contact/fields/Covid_Need__c.field-meta.xml
<CustomField>
    <fullName>Covid_Need__c</fullName>
    <description>This field is provided for customers to fill out a form with regards to any special Project Need.</description>
    <inlineHelpText>COVID19 Related manufacturing needs form</inlineHelpText>
    <label>Covid Need</label>
    <length>65536</length>
    <type>LongTextArea</type>
</CustomField>