unpackaged/main/default/objects/Contact/fields/CPCLastSurveyDate__c.field-meta.xml
<CustomField>
    <fullName>CPCLastSurveyDate__c</fullName>
    <description>Internal Use in Flow</description>
    <label>CPC Last Survey Date</label>
    <type>Date</type>
</CustomField>