unpackaged/main/default/objects/Contact/fields/Created_in_Salesforce_Int_Flag__c.field-meta.xml
<CustomField>
    <fullName>Created_in_Salesforce_Int_Flag__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field is used between replications of Salesforce to Hubspot</description>
    <label>Created in Salesforce Int Flag</label>
    <type>Checkbox</type>
</CustomField>