unpackaged/main/default/objects/Contact/fields/Customer_Delete_Request_C__c.field-meta.xml
<CustomField>
    <fullName>Customer_Delete_Request_C__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This Flag marks that the customer requested to be deleted.</inlineHelpText>
    <label>Customer Delete Request</label>
    <type>Checkbox</type>
</CustomField>