unpackaged/main/default/objects/Contact/fields/Customer_Prediction_Score__c.field-meta.xml
<CustomField>
    <fullName>Customer_Prediction_Score__c</fullName>
    <label>Customer Prediction Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>