unpackaged/main/default/objects/Contact/fields/Customer_Status_Bar__c.field-meta.xml
<CustomField>
    <fullName>Customer_Status_Bar__c</fullName>
    <formula>IF(!ISBLANK(vc_status__c),vc_status__c,
 IF(ISBLANK(First_Quote_Date__c) &amp;&amp; ISBLANK(Contact_s_Date_of_First_Order__c),"Contact",
  IF(!ISBLANK(First_Quote_Date__c) &amp;&amp; ISBLANK(Contact_s_Date_of_First_Order__c),"Quoter", Customer_Status_HS__c)))
&amp;
IF(!ISBLANK(vc_status__c) || (ISBLANK(Contact_s_Date_of_First_Order__c)), "",
 IF( Today()- Contact_s_Date_of_First_Order__c &lt;= 365," - New"," - Retention"))</formula>
    <label>Customer Status Bar</label>
    <type>Text</type>
</CustomField>