unpackaged/main/default/objects/Contact/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <formula>IF ( AND (  Account_Owner_Type__c = 'BDR', Account.BDR_Retention_Countdown_Calculation__c &lt; 91, Account.BDR_Retention_Countdown_Calculation__c &gt; 0),'NEW', IF ( AND (  Account_Owner_Type__c = 'BDR', Account.BDR_Retention_Countdown_Calculation__c &lt;= 0), 'RETENTION', IF ( AND (  Account_Owner_Type__c = 'AM',  AM_Retention_Countdown_Calculation__c  &lt; 366,  AM_Retention_Countdown_Calculation__c  &gt; 0),'NEW', IF ( AND (  Account_Owner_Type__c = 'AM',  AM_Retention_Countdown_Calculation__c  &lt;= 0), 'RETENTION',''))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Type</label>
    <type>Text</type>
</CustomField>