unpackaged/main/default/objects/Contact/fields/CustomerStatus__c.field-meta.xml
<CustomField>
    <fullName>CustomerStatus__c</fullName>
    <inlineHelpText>This field is being deprecated in favor of using "Customer Status HS" instead, due to an architecture change around how we receive this data.</inlineHelpText>
    <label>[DNU] Customer Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>