unpackaged/main/default/objects/Contact/fields/CustomerValue__c.field-meta.xml
<CustomField>
    <fullName>CustomerValue__c</fullName>
    <label>Customer Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>