unpackaged/main/default/objects/Contact/fields/Date_of_Last_DFM_Quote__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Last_DFM_Quote__c</fullName>
    <label>Date of Last DFM Quote</label>
    <type>DateTime</type>
</CustomField>