unpackaged/main/default/objects/Contact/fields/Date_of_Last_Order__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Last_Order__c</fullName>
    <label>Date of Last Order</label>
    <type>Date</type>
</CustomField>