unpackaged/main/default/objects/Contact/fields/Date_of_Last_Thomas_Search_General__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Last_Thomas_Search_General__c</fullName>
    <label>Date of Last Thomas Search(General)</label>
    <type>Date</type>
</CustomField>