unpackaged/main/default/objects/Contact/fields/Days_Since_Last_Order__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Order__c</fullName>
    <formula>today()- Date_of_Last_Order__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Last Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>