unpackaged/main/default/objects/Contact/fields/Design_Guide_Downloads__c.field-meta.xml
<CustomField>
    <fullName>Design_Guide_Downloads__c</fullName>
    <label>Design Guide Downloads</label>
    <length>100</length>
    <type>Text</type>
</CustomField>