unpackaged/main/default/objects/Contact/fields/DFM_Quote__c.field-meta.xml
<CustomField>
    <fullName>DFM_Quote__c</fullName>
    <label>DFM Quote</label>
    <length>13</length>
    <type>Text</type>
</CustomField>