unpackaged/main/default/objects/Contact/fields/DnB_Connect_DUNS__c.field-meta.xml
<CustomField>
    <fullName>DnB_Connect_DUNS__c</fullName>
    <label>D&amp;B Connect DUNS</label>
    <length>9</length>
    <type>Text</type>
</CustomField>