unpackaged/main/default/objects/Contact/fields/dnb_exclude_company__c.field-meta.xml
<CustomField>
    <fullName>dnb_exclude_company__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude from D&amp;B Connect</label>
    <type>Checkbox</type>
</CustomField>