unpackaged/main/default/objects/Contact/fields/dnb_id__c.field-meta.xml
<CustomField>
    <fullName>dnb_id__c</fullName>
    <label>[dnu] dnb_id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>