unpackaged/main/default/objects/Contact/fields/Drift_Sales_Question__c.field-meta.xml
<CustomField>
    <fullName>Drift_Sales_Question__c</fullName>
    <label>Drift Sales Question</label>
    <length>255</length>
    <type>Text</type>
</CustomField>