unpackaged/main/default/objects/Contact/fields/ERP_Contact_First_Name__c.field-meta.xml
<CustomField>
    <fullName>ERP_Contact_First_Name__c</fullName>
    <description>The first name of a Contact assoicated to a quote coming from the ERP.</description>
    <inlineHelpText>First Name as it was in the ERP when it came to SF</inlineHelpText>
    <label>ERP - Contact First Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>