unpackaged/main/default/objects/Contact/fields/ERP_Contact_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>ERP_Contact_Last_Name__c</fullName>
    <inlineHelpText>Last Name as it was in the ERP when it came to SF</inlineHelpText>
    <label>ERP - Contact Last Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>