unpackaged/main/default/objects/Contact/fields/ERP_Contact_Orders__c.field-meta.xml
<CustomField>
    <fullName>ERP_Contact_Orders__c</fullName>
    <formula>IF( NOT(ISBLANK( Email )) , HYPERLINK("https://erp.xometry.com/quotes-orders?start=0&amp;length=50&amp;order%5B0%5D%5B%5D=4&amp;order%5B0%5D%5B%5D=desc&amp;search%5Bsearch%5D="+  Email +"&amp;n_columns=" +  $Label.Orders_Datatable_Column_Length,"Go to this Contact's Orders in the ERP", "_blank"), "No Email Provided on Contact")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ERP Contact Orders</label>
    <type>Text</type>
</CustomField>