unpackaged/main/default/objects/Contact/fields/ERP_contact_page__c.field-meta.xml
<CustomField>
    <fullName>ERP_contact_page__c</fullName>
    <formula>if(isblank(Xometry_ERP_Contact_ID__c),"Unregistered User",hyperlink("https://www.xometry.com/user-settings/"&amp;Xometry_ERP_Contact_ID__c,"Registered User"))</formula>
    <inlineHelpText>If the user has at least started the registration process the link will take you to the user page otherwise it will show as unregistered.</inlineHelpText>
    <label>ERP Contact Page</label>
    <type>Text</type>
</CustomField>