unpackaged/main/default/objects/Contact/fields/ERP_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>ERP_Contact_Phone__c</fullName>
    <description>This field contains the ERP User's Phone Field.</description>
    <label>ERP Contact Phone</label>
    <type>Phone</type>
</CustomField>