unpackaged/main/default/objects/Contact/fields/ERP_Contact_Quotes__c.field-meta.xml
<CustomField>
    <fullName>ERP_Contact_Quotes__c</fullName>
    <formula>IF( NOT(ISBLANK( Email )) , HYPERLINK("https://www.xometry.com/staff/quotes-list/?search="+ SUBSTITUTE(Email, "@", "%40") +"&amp;rowsPerPage=25&amp;page=1&amp;sortBy=last_updated&amp;sortDirection=desc","Go to this Contact's Quotes in the ERP", "_blank"), "No Email Provided on Contact")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ERP Contact Quotes</label>
    <type>Text</type>
</CustomField>