unpackaged/main/default/objects/Contact/fields/ERP_Contact_Url__c.field-meta.xml
<CustomField>
    <fullName>ERP_Contact_Url__c</fullName>
    <formula>IF( NOT(ISBLANK( Email )) , HYPERLINK("https://erp.xometry.com/quotes-orders?start=0&amp;length=50&amp;order%5B0%5D%5B%5D=4&amp;order%5B0%5D%5B%5D=desc&amp;search%5Bsearch%5D="+  SUBSTITUTE(Email, "@", "%40") +"&amp;n_columns=20","Go to this Contact in the ERP", "_blank"), "No Email Provided on Contact")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>[dnu] ERP Contact Quotes/Orders</label>
    <type>Text</type>
</CustomField>