unpackaged/main/default/objects/Contact/fields/ERP_Shipping_State_or_Province__c.field-meta.xml
<CustomField>
    <fullName>ERP_Shipping_State_or_Province__c</fullName>
    <label>ERP Shipping State or Province</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>State_or_Province</valueSetName>
    </valueSet>
</CustomField>