unpackaged/main/default/objects/Contact/fields/EUD_EmailOptOut__c.field-meta.xml
<CustomField>
    <fullName>EUD_EmailOptOut__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check the box if this contact would no longer like to receive automated emails about Missing End Use Data.</description>
    <label>EUD Email Opt-Out</label>
    <type>Checkbox</type>
</CustomField>