unpackaged/main/default/objects/Contact/fields/First_IM_Tool_Order__c.field-meta.xml
<CustomField>
    <fullName>First_IM_Tool_Order__c</fullName>
    <label>First IM Tool Order</label>
    <type>Date</type>
</CustomField>