unpackaged/main/default/objects/Contact/fields/First_IM_Tool_Quote__c.field-meta.xml
<CustomField>
    <fullName>First_IM_Tool_Quote__c</fullName>
    <label>First IM Tool Quote</label>
    <type>Date</type>
</CustomField>