unpackaged/main/default/objects/Contact/fields/First_Order_Owner_Id__c.field-meta.xml
<CustomField>
    <fullName>First_Order_Owner_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>First Order Owner Id</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts3</relationshipName>
    <type>Lookup</type>
</CustomField>