unpackaged/main/default/objects/Contact/fields/First_Quote_Owner__c.field-meta.xml
<CustomField>
    <fullName>First_Quote_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>First Quote Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ContactsFirstQuote</relationshipName>
    <type>Lookup</type>
</CustomField>