unpackaged/main/default/objects/Contact/fields/First_Quote_Owner_Role__c.field-meta.xml
<CustomField>
    <fullName>First_Quote_Owner_Role__c</fullName>
    <label>First Quote Owner Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>