unpackaged/main/default/objects/Contact/fields/First_Quote_Punchout__c.field-meta.xml
<CustomField>
    <fullName>First_Quote_Punchout__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Quote Punchout</label>
    <type>Checkbox</type>
</CustomField>