unpackaged/main/default/objects/Contact/fields/First_SDR_Activity_Owner__c.field-meta.xml
<CustomField>
    <fullName>First_SDR_Activity_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The assignee of the task associated to the First SDR Activity Date.</description>
    <inlineHelpText>The assignee of the task associated to the First SDR Activity Date.</inlineHelpText>
    <label>First SDR Activity Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>