unpackaged/main/default/objects/Contact/fields/for_hs_email_owner__c.field-meta.xml
<CustomField>
    <fullName>for_hs_email_owner__c</fullName>
    <label>for_hs_email_owner</label>
    <type>Email</type>
</CustomField>