unpackaged/main/default/objects/Contact/fields/FusionMaterials__c.field-meta.xml
<CustomField>
    <fullName>FusionMaterials__c</fullName>
    <label>Fusion Materials</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>