unpackaged/main/default/objects/Contact/fields/FusionProcesses__c.field-meta.xml
<CustomField>
    <fullName>FusionProcesses__c</fullName>
    <label>Fusion Processes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>