unpackaged/main/default/objects/Contact/fields/Generated_by_Sales__c.field-meta.xml
<CustomField>
    <fullName>Generated_by_Sales__c</fullName>
    <defaultValue>"FALSE"</defaultValue>
    <label>Generated by Sales</label>
    <length>255</length>
    <type>Text</type>
</CustomField>