unpackaged/main/default/objects/Contact/fields/Generic_Contact__c.field-meta.xml
<CustomField>
    <fullName>Generic_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generic Contact</label>
    <type>Checkbox</type>
</CustomField>