unpackaged/main/default/objects/Contact/fields/GNO_PartnerId__c.field-meta.xml
<CustomField>
    <fullName>GNO_PartnerId__c</fullName>
    <label>GNO Partner Id</label>
    <length>12</length>
    <type>Text</type>
</CustomField>