unpackaged/main/default/objects/Contact/fields/GNOLastSurveyDate__c.field-meta.xml
<CustomField>
    <fullName>GNOLastSurveyDate__c</fullName>
    <description>Date when the last survey was sent to the contact through Delighted.</description>
    <label>GNO Last Survey Date</label>
    <type>Date</type>
</CustomField>