unpackaged/main/default/objects/Contact/fields/Has_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Has_Ordered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Ordered</label>
    <type>Checkbox</type>
</CustomField>