unpackaged/main/default/objects/Contact/fields/has_ordered_Die_Casting__c.field-meta.xml
<CustomField>
    <fullName>has_ordered_Die_Casting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Ordered: Die Casting</label>
    <type>Checkbox</type>
</CustomField>