unpackaged/main/default/objects/Contact/fields/has_ordered_Injection_Molding__c.field-meta.xml
<CustomField>
    <fullName>has_ordered_Injection_Molding__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Ordered: Injection Molding</label>
    <type>Checkbox</type>
</CustomField>