unpackaged/main/default/objects/Contact/fields/Has_Ordered_LSPc__c.field-meta.xml
<CustomField>
    <fullName>Has_Ordered_LSPc__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Ordered: LSPc</label>
    <type>Checkbox</type>
</CustomField>