unpackaged/main/default/objects/Contact/fields/Has_Ordered_Other__c.field-meta.xml
<CustomField>
    <fullName>Has_Ordered_Other__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Ordered: Other</label>
    <type>Checkbox</type>
</CustomField>