unpackaged/main/default/objects/Contact/fields/has_ordered_SLA__c.field-meta.xml
<CustomField>
    <fullName>has_ordered_SLA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Ordered: SLA</label>
    <type>Checkbox</type>
</CustomField>