unpackaged/main/default/objects/Contact/fields/Has_Ordered_Tube_Bending__c.field-meta.xml
<CustomField>
    <fullName>Has_Ordered_Tube_Bending__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Ordered: Tube Bending</label>
    <type>Checkbox</type>
</CustomField>