unpackaged/main/default/objects/Contact/fields/Has_Phone__c.field-meta.xml
<CustomField>
    <fullName>Has_Phone__c</fullName>
    <formula>not(isblank(Phone ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Phone?</label>
    <type>Checkbox</type>
</CustomField>